--- a/delivery/package.json
+++ b/delivery/package.json
@@ -1,25 +1,20 @@
 {
-  "name": "validation-echo",
+  "name": "delivery",
   "version": "1.0.0",
-  "description": "Validates the functionality of echo.",
+  "description": "Provides delivery services",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently --kill-others \"tsc -w\" \"nodemon dist/index.js\"",
-    "test": "mocha --require ts-node/register --watch-extensions ts 'test/**/*.ts'"
+    "start": "node -r ts-node/register ./src/index.ts",
+    "start:watch": "nodemon"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/chai": "^4.1.7",
     "@types/express": "^4.16.0",
     "@types/express-bunyan-logger": "^1.3.0",
-    "@types/mocha": "^5.2.5",
     "@types/request-promise-native": "^1.0.15",
     "@types/uuid": "^3.4.4",
-    "chai": "^4.2.0",
     "concurrently": "^4.1.0",
-    "mocha": "^5.2.0",
-    "mocha-typescript": "^1.1.17",
     "nodemon": "^1.18.9",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
