--- a/intake/package.json
+++ b/intake/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.16.0",
     "@types/express-bunyan-logger": "^1.3.0",
     "@types/request-promise-native": "^1.0.15",
@@ -20,6 +21,7 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "bunyan": "^1.8.12",
     "express": "^4.16.4",
@@ -28,7 +30,6 @@
     "reflect-metadata": "^0.1.12",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
-    "save-dev": "^2.0.0",
     "tslint": "^5.12.0",
     "uuid": "^3.3.2"
   }
